trying to fix the OOM