@@ -32,6 +32,10 @@ subprojects {
         //This way Spock/Groovy power asserts will be  visiblein the build log
         //Very useful - you don't have to look at the test results to debug a test failure
         testLogging.exceptionFormat = 'full'
+        //The below seems to help  with "Process 'Gradle Worker Daemon 1' finished with non-zero exit value 137" in circle
+        //https://stackoverflow.com/questions/38967991/why-are-my-gradle-builds-dying-with-exit-code-137
+        maxHeapSize '512m'
+        jvmArgs "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"
       }
     }
   }
